<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <include android:id="@+id/compassToolbar"
        layout="@layout/app_toolbar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@color/app_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/destchoice_subtitle"
                        android:layout_marginTop="@dimen/abc_control_padding_material"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/destchoice_name"
                        android:layout_marginTop="@dimen/abc_control_padding_material"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/nameEditText"
                        android:inputType="text"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/destchoice_Latitude"
                        android:layout_marginTop="@dimen/abc_control_padding_material"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/latitudeEditText"
                        android:inputType="numberDecimal|numberSigned"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/destchoice_Longitude"
                        android:layout_marginTop="@dimen/abc_control_padding_material"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/longitudeEditText"
                        android:inputType="numberDecimal|numberSigned"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/destchoice_use_current"
                        android:onClick="currentPositionOnClick"/>

                </LinearLayout>
            </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_drop_shadow_height"
            android:background="@drawable/drop_shadow"
            android:layout_marginTop="-3dp"/>
    </FrameLayout>

</LinearLayout>