<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/helpToolbar"
        layout="@layout/app_toolbar"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:background="@color/app_background">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_ok"
                    android:onClick="onButtonOkClick"/>
            </LinearLayout>

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:background="@color/app_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:text="@string/help_subtitle1"
                        android:layout_margin="10dp"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/help_text1"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:src="@drawable/phone_rotate"
                            android:layout_margin="10dp"
                            android:layout_weight="1"/>
                    </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:src="@drawable/help_dest_button"
                        android:layout_margin="10dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_text2"
                        android:layout_margin="10dp"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/help_text3"
                        android:layout_margin="10dp"
                        android:layout_weight="3"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="75dp"
                        android:src="@drawable/help_arrow_head"
                        android:layout_margin="10dp"
                        android:layout_weight="1"/>
                </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_drop_shadow_height"
            android:background="@drawable/drop_shadow"
            android:layout_marginTop="-3dp"/>
    </FrameLayout>


</LinearLayout>